syntax = 'proto3';

import "./client-server/ClientServer.proto";

message ClientServerMessage {
  enum Compression {
    NONE = 0;
    ZSTD = 1;
  }
  Compression compression = 1;
  uint32 uncompressed_size = 2;
  oneof message {
    bytes compressed_data = 3;
    ClientServer data = 4;
  }
}