syntax = "proto3";

import "server-client/ServerClient.proto";
import "shared/Compression.proto";

message ServerClientMessage {
  Compression compression = 1;
  uint32 uncompressed_size = 2;
  oneof message {
    bytes compressed_data = 3;
    ServerClient data = 4;
  }
}