syntax = "proto3";

import "client-server/Handshake.proto";
import "shared/Ping.proto";
import "shared/Player.proto";
import "client-server/PlayerData.proto";
import "shared/MetaData.proto";
import "shared/Chat.proto";

package net64.client;

message ClientServer {
  enum MessageType {
    UNKNOWN = 0;
    HANDSHAKE = 2;
    PING = 3;
    PLAYER_UPDATE = 6;
    PLAYER_DATA = 128;
    META_DATA = 129;
    CHAT = 130;
  }
  MessageType message_type = 1;
  oneof message {
    Handshake handshake = 2;
    net64.shared.Ping ping = 3;
    net64.shared.Player player = 6;
    PlayerData player_data = 128;
    net64.shared.MetaData meta_data = 129;
    net64.shared.Chat chat = 130;
  }
}