syntax = "proto3";

import "shared/GameMode.proto";
import "server-client/PlayerUpdate.proto";

package net64.server;

message Handshake {
  uint32 player_id = 1;
  net64.shared.GameMode game_mode = 2;
  PlayerListUpdate player_list = 3;
}