syntax = "proto3";

package net64.server;

message PlayerData {
  uint32 player_length = 1;
  uint32 data_length = 2;
  bytes player_data = 3;
}