syntax = "proto3"; 

import "shared/Player.proto";

package net64.server;

message PlayerUpdate {
  uint32 player_id = 1; 
  net64.shared.Player player = 2; 
}

message PlayerListUpdate {
  repeated PlayerUpdate player_updates = 1;
}