syntax = "proto3";

import "server-client/ServerHandshake.proto";
import "shared/Ping.proto";
import "server-client/ServerMessage.proto";
import "server-client/PlayerUpdate.proto";
import "shared/PlayerData.proto";
import "shared/MetaData.proto";
import "shared/Chat.proto";

message ServerClient {
  enum MessageType {
    UNKNOWN = 0;
    HANDSHAKE = 2;
    PING = 3;
    SERVER_MESSAGE = 4;
    PLAYER_LIST_UPDATE = 5;
    PLAYER_UPDATE = 6;
    PLAYER_DATA = 128;
    META_DATA = 129;
    CHAT = 130;
  }
  MessageType message_type = 1;
  oneof message {
    ServerHandshake handshake = 2;
    Ping ping = 3;
    ServerMessage server_message = 4;
    PlayerListUpdate player_list_update = 5;
    PlayerUpdate player_update = 6;
    PlayerData player_data = 128;
    MetaData meta_data = 129;
    Chat chat = 130;
  }
}