syntax = "proto3";

import "shared/GameMode.proto";
import "server-client/ConnectionDenied.proto";

package net64.server;

message ServerMessage {
  enum MessageType {
    CONNECTION_DENIED = 0;
    GAME_MODE = 1;
    SERVER_TOKEN = 2;
  }
  MessageType message_type = 1;
  oneof message {
    ConnectionDenied connection_denied = 2;
    net64.shared.GameMode game_mode = 3;
    ServerToken server_token = 4;
  }
}

message ServerToken {
  enum TokenType {
    GRANT = 0;
    LOSE = 1;
  }
  TokenType token_type = 1;
  string signature = 2;
}