syntax = "proto3";

package net64.shared;
 
message Player { 
  string username = 1; 
  uint32 character_id = 2; 
}